<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:showAsAction="ifRoom">

    <item
        android:orderInCategory="1"
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search"/>

    <item
        android:orderInCategory="1"
        android:id="@+id/about"
        android:icon="@drawable/information"
        android:title="@string/about" />
    <item
        android:orderInCategory="2"
        android:id="@+id/exit"
        android:icon="@drawable/exit"
        android:title="@string/exit" />
</menu>